force-app/main/default/objects/Asset/fields/ADA_Code_ID__c.field-meta.xml
<CustomField>
    <fullName>ADA_Code_ID__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ADA Code ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>