force-app/main/default/objects/Asset/fields/AHJ_Commission_Date__c.field-meta.xml
<CustomField>
    <fullName>AHJ_Commission_Date__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AHJ Commission Date</label>
    <type>Date</type>
</CustomField>