force-app/main/default/objects/Asset/fields/Capacity_Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Measure_Type__c</fullName>
    <label>Capacity Measure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imperial</fullName>
            </value>
            <value>
                <fullName>Metric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>