force-app/main/default/objects/Asset/fields/Cat1_Test_2_Man_Required__c.field-meta.xml
<CustomField>
    <fullName>Cat1_Test_2_Man_Required__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Cat1 Test 2 Man Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>