force-app/main/default/objects/Asset/fields/CAT1_Test_Assigned_to_Third_Party_Vendor__c.field-meta.xml
<CustomField>
    <fullName>CAT1_Test_Assigned_to_Third_Party_Vendor__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>CAT1 Test Assigned to Third Party Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>