force-app/main/default/objects/Asset/fields/Controller_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Controller_Manufacturer__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Controller Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;D Elevator (Angelo &amp; Dominic Elevator)</fullName>
            </value>
            <value>
                <fullName>Abell</fullName>
            </value>
            <value>
                <fullName>Access Elevator</fullName>
            </value>
            <value>
                <fullName>Access Industrial</fullName>
            </value>
            <value>
                <fullName>Alimak</fullName>
            </value>
            <value>
                <fullName>American Crescent</fullName>
            </value>
            <value>
                <fullName>Amtech</fullName>
            </value>
            <value>
                <fullName>Armor</fullName>
            </value>
            <value>
                <fullName>Atlas Elevator - San Francisco</fullName>
            </value>
            <value>
                <fullName>Automatisation JRT</fullName>
            </value>
            <value>
                <fullName>Autoquip</fullName>
            </value>
            <value>
                <fullName>Autoquip Miner</fullName>
            </value>
            <value>
                <fullName>Baxco</fullName>
            </value>
            <value>
                <fullName>Bella Lift</fullName>
            </value>
            <value>
                <fullName>Brazos Elevator</fullName>
            </value>
            <value>
                <fullName>Cal-West</fullName>
            </value>
            <value>
                <fullName>Canton</fullName>
            </value>
            <value>
                <fullName>Carrier-Lifts</fullName>
            </value>
            <value>
                <fullName>CEC/Swift</fullName>
            </value>
            <value>
                <fullName>CEMCO</fullName>
            </value>
            <value>
                <fullName>Century</fullName>
            </value>
            <value>
                <fullName>Cetek</fullName>
            </value>
            <value>
                <fullName>Cheney</fullName>
            </value>
            <value>
                <fullName>Chico Elevator</fullName>
            </value>
            <value>
                <fullName>CJ Anderson</fullName>
            </value>
            <value>
                <fullName>Claddagh</fullName>
            </value>
            <value>
                <fullName>Coast</fullName>
            </value>
            <value>
                <fullName>Concord</fullName>
            </value>
            <value>
                <fullName>Concordia</fullName>
            </value>
            <value>
                <fullName>Consolidated Steel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>