force-app/main/default/objects/Asset/fields/Controller_Model__c.field-meta.xml
<CustomField>
    <fullName>Controller_Model__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Controller Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Controller_Manufacturer__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Relay Logic</fullName>
            </value>
            <value>
                <fullName>PLS-3</fullName>
            </value>
            <value>
                <fullName>Relay Generic</fullName>
            </value>
            <value>
                <fullName>Omega 1000</fullName>
            </value>
            <value>
                <fullName>ACS 150</fullName>
            </value>
            <value>
                <fullName>Advance Selector 450</fullName>
            </value>
            <value>
                <fullName>Advance Selector 451</fullName>
            </value>
            <value>
                <fullName>Dynaglide I</fullName>
            </value>
            <value>
                <fullName>Generic Relay</fullName>
            </value>
            <value>
                <fullName>TMS 200</fullName>
            </value>
            <value>
                <fullName>TMS 500</fullName>
            </value>
            <value>
                <fullName>TMS 50A AV</fullName>
            </value>
            <value>
                <fullName>TMS 516</fullName>
            </value>
            <value>
                <fullName>TMS 600</fullName>
            </value>
            <value>
                <fullName>TMS 700</fullName>
            </value>
            <value>
                <fullName>TMS 900</fullName>
            </value>
            <value>
                <fullName>TMS 9000</fullName>
            </value>
            <value>
                <fullName>TMS 900plus</fullName>
            </value>
            <value>
                <fullName>Selective Collective</fullName>
            </value>
            <value>
                <fullName>Autoquip</fullName>
            </value>
            <value>
                <fullName>UDT-15</fullName>
            </value>
            <value>
                <fullName>EL96</fullName>
            </value>
            <value>
                <fullName>LRL42</fullName>
            </value>
            <value>
                <fullName>Relay</fullName>
            </value>
            <value>
                <fullName>Futura Hydraulic</fullName>
            </value>
            <value>
                <fullName>Futura Traction</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Meridia</fullName>
            </value>
            <value>
                <fullName>SWIFT 1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>