force-app/main/default/objects/Asset/fields/Controller_Type__c.field-meta.xml
<CustomField>
    <fullName>Controller_Type__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Controller Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Controller_Model__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relay Logic</fullName>
            </value>
            <value>
                <fullName>Microprocessor</fullName>
            </value>
            <value>
                <fullName>Solid State</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>