force-app/main/default/objects/Asset/fields/Critical_Unit__c.field-meta.xml
<CustomField>
    <fullName>Critical_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created this as part of ADO user story 12187</description>
    <label>Critical Unit</label>
    <type>Checkbox</type>
</CustomField>