force-app/main/default/objects/Asset/fields/Current_Digital_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Current_Digital_Subscription__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Digital Subscription</label>
    <length>50</length>
    <type>Text</type>
</CustomField>