force-app/main/default/objects/Asset/fields/Customer_Portal_Master_Data__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Master_Data__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Customer Portal Master Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>