force-app/main/default/objects/Asset/fields/DEP_Provisioned_Data__c.field-meta.xml
<CustomField>
    <fullName>DEP_Provisioned_Data__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DEP Provisioned Data</label>
    <length>250</length>
    <type>Text</type>
</CustomField>