force-app/main/default/objects/Asset/fields/Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>Drive_Type__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Drive  Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generator</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PWM</fullName>
            </value>
            <value>
                <fullName>Quattro</fullName>
            </value>
            <value>
                <fullName>Regen</fullName>
            </value>
            <value>
                <fullName>SCR</fullName>
            </value>
            <value>
                <fullName>VVVF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>