force-app/main/default/objects/Asset/fields/Front_Door_Complexities__c.field-meta.xml
<CustomField>
    <fullName>Front_Door_Complexities__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Front Door Complexities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Spd Side Opening (SSSS)</fullName>
            </value>
            <value>
                <fullName>2 - Spd Side Opening (2SSS)</fullName>
            </value>
            <value>
                <fullName>3 - Spd Side Opening (3SSS)</fullName>
            </value>
            <value>
                <fullName>Accordian Gate</fullName>
            </value>
            <value>
                <fullName>Bi-Parting Manual (VERTICAL BI-PART (MANUAL))</fullName>
            </value>
            <value>
                <fullName>Bi-Parting Power (VERTICAL BI-PART (POWER))</fullName>
            </value>
            <value>
                <fullName>Center Opening (SSCO)</fullName>
            </value>
            <value>
                <fullName>2 SPD Center Opening  (2SCO)</fullName>
            </value>
            <value>
                <fullName>3 SPD Center Opening  (3SCO)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Scissor Gate</fullName>
            </value>
            <value>
                <fullName>Swing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>