force-app/main/default/objects/Asset/fields/Front_Opening__c.field-meta.xml
<CustomField>
    <fullName>Front_Opening__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Front Opening</label>
    <length>25</length>
    <type>Text</type>
</CustomField>