force-app/main/default/objects/Asset/fields/Government_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Government_Inspection_Date__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Government Inspection Date</label>
    <type>Date</type>
</CustomField>