force-app/main/default/objects/Asset/fields/Govt_Insp_Reqd_By_Contract__c.field-meta.xml
<CustomField>
    <fullName>Govt_Insp_Reqd_By_Contract__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Govt Insp Reqd By Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>