force-app/main/default/objects/Asset/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Health Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>