force-app/main/default/objects/Asset/fields/IVR_Instruction__c.field-meta.xml
<CustomField>
    <fullName>IVR_Instruction__c</fullName>
    <formula>IF(ISBLANK(Location.IVR_Procedures__c), &apos;&apos;, Location.IVR_Procedures__r.IVR_Instruction__c )</formula>
    <label>IVR Instruction</label>
    <type>Text</type>
</CustomField>