force-app/main/default/objects/Asset/fields/IVR_Pin__c.field-meta.xml
<CustomField>
    <fullName>IVR_Pin__c</fullName>
    <formula>IF(ISBLANK(Location.IVR_Procedures__c), &apos;&apos;, Location.IVR_Procedures__r.IVR_Pin__c )</formula>
    <label>IVR Pin</label>
    <type>Text</type>
</CustomField>