force-app/main/default/objects/Asset/fields/Jack_Type__c.field-meta.xml
<CustomField>
    <fullName>Jack_Type__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Jack Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Stage Holeless</fullName>
            </value>
            <value>
                <fullName>Telescopic</fullName>
            </value>
            <value>
                <fullName>Chain</fullName>
            </value>
            <value>
                <fullName>Cimarron Single Stage</fullName>
            </value>
            <value>
                <fullName>Cimarron Telescopic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>Twin-Post</fullName>
            </value>
            <value>
                <fullName>Twin-Post Telescopic</fullName>
            </value>
            <value>
                <fullName>3-Stage Telescopic</fullName>
            </value>
            <value>
                <fullName>Twin-Post 3-Stage Telescopic</fullName>
            </value>
            <value>
                <fullName>Roped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>