force-app/main/default/objects/Asset/fields/Last_Periodic_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Periodic_Test_Date__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Periodic Test Date</label>
    <type>Date</type>
</CustomField>