force-app/main/default/objects/Asset/fields/Legacy_Source__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Source__c</fullName>
    <description>US 13841: Used to record the source system for Data Migration, applied during Data Migration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Legacy Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>