force-app/main/default/objects/Asset/fields/Machine_Room_Location__c.field-meta.xml
<CustomField>
    <fullName>Machine_Room_Location__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Machine Room Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjacent</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Overhead</fullName>
            </value>
            <value>
                <fullName>In the Wall Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>