force-app/main/default/objects/Asset/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>Created this as part of user story #13851</description>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturer A</fullName>
            </value>
            <value>
                <fullName>Manufacturer B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>