force-app/main/default/objects/Asset/fields/MAX_Device_ID__c.field-meta.xml
<CustomField>
    <fullName>MAX_Device_ID__c</fullName>
    <description>US 13851: Represents the MAX Device&apos;s Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MAX Device ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>