force-app/main/default/objects/Asset/fields/MAX_Link_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>MAX_Link_Phone_Number__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MAX Link Phone Number</label>
    <type>Phone</type>
</CustomField>