force-app/main/default/objects/Asset/fields/MAX_Link_Status__c.field-meta.xml
<CustomField>
    <fullName>MAX_Link_Status__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MAX Link Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>