force-app/main/default/objects/Asset/fields/Multimedia_Provisioned__c.field-meta.xml
<CustomField>
    <fullName>Multimedia_Provisioned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created this as part of ADO user story 12187</description>
    <label>Multimedia Provisioned</label>
    <type>Checkbox</type>
</CustomField>