force-app/main/default/objects/Asset/fields/Multimedia_Vendor_Device__c.field-meta.xml
<CustomField>
    <fullName>Multimedia_Vendor_Device__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Multimedia Vendor Device</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAD</fullName>
            </value>
            <value>
                <fullName>RATH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>